# r3d

./: .gitignore  CMakeLists.txt  README.md
cmake/: r3dConfig.cmake
include/: r3d.h
include/r3d/: AStarSearch.h  Boundaries.h  Bounds.h  CameraParams.h  Colour.h  Copier.h  Curvature.h  CurvatureMetrics.h  DirectedSurfacePointFinder.h  EdgeFaceAdder.h  FaceAngles.h  FaceInterpolator.h  FaceParser.h  FacePlane.h  FaceUnfolder.h  FaceUnfoldingVertexSearcher.h  FacetCut.h  FastMarcher.h  FrontFinder.h  FunctionMapper.h  GlobalPlaneSlicingPath.h  HoleFiller.h  ICPAligner.h  Image.h  Internal.h  IterativeSurfacePathFinder.h  KDTree.h  LocalPlaneSlicingPath.h  Manifolds.h  Mesh.h  Orientation.h  PPFMatcher.h  PatchBendingEnergy.h  PlanarSlicingPath.h  PlaneSlicingPath.h  ProcrustesSuperimposition.h  Reflector.h  RegionSelector.h  Remesher.h  Slicer.h  (+14 more)
src/: AStarSearch.cpp  Boundaries.cpp  Bounds.cpp  CameraParams.cpp  Colour.cpp  Copier.cpp  Curvature.cpp  CurvatureMetrics.cpp  DirectedSurfacePointFinder.cpp  EdgeFaceAdder.cpp  FaceAngles.cpp  FaceInterpolator.cpp  FaceParser.cpp  FacePlane.cpp  FaceUnfolder.cpp  FaceUnfoldingVertexSearcher.cpp  FacetCut.cpp  FastMarcher.cpp  FrontFinder.cpp  FunctionMapper.cpp  HoleFiller.cpp  ICPAligner.cpp  Image.cpp  Internal.cpp  IterativeSurfacePathFinder.cpp  KDTree.cpp  LocalPlaneSlicingPath.cpp  Manifolds.cpp  Mesh.cpp  Orientation.cpp  PPFMatcher.cpp  PatchBendingEnergy.cpp  PlanarSlicingPath.cpp  PlaneSlicingPath.cpp  ProcrustesSuperimposition.cpp  Reflector.cpp  RegionSelector.cpp  Remesher.cpp  Slicer.cpp  Smoother.cpp  (+13 more)
src/old/: Cleaner.cpp
